# CubePixel

./: .cython-lint.toml  .gitignore  LICENSE  README.md  benchmark.py  config.prc  dev_requirements.txt  main.py  obj_importer.py  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  run_benchmarks.py  setup.py
.github/workflows/: lint_python.yml
CubePixel/: LICENSE  cython_functions.pyd  main.py  requirements.txt  setup.py
CubePixel/data/: parameters.json
CubePixel/modules/: chunk.py  chunk_handler.py  chunk_mesh.py  cpp_functions.cpp  cython_functions.cpp  cython_functions.pyx  entity_loader.py  entity_model_loader.py  gui.py  model_loader.py  player.py  settings.py  setup.py  terrain.py  texture_shader.py  world.py
CubePixel/src/: entity_loader.py  gui_prefabs.py
Vxyl/: main.py
Vxyl/modules/: gui.py
Vyxel/: chunk_handler.py  main.py  requirements.txt
Vyxel/data/: parameters.json
Vyxel/modules/: chunk.py  chunk_handler.py  entity_loader.py  (+5 more)
benchmarks/: benchmark_no_threading.py  benchmark_threading.py
ext/: FastNoiseLite.h  c_extensions.pyx  cython_functions.c  cython_functions.pyx  fast_noise_lite.pxd  world_tools.pyx
res/: parameters.json
shaders/: outline.frag  outline.vert  selector.frag  voxel.frag  voxel.vert  voxel_display.frag  voxel_display.vert
src/: __init__.py  chunk.py  chunk_handler.py  chunk_manager.py  cython_functions.c  cython_functions.pyx  data_generator.pyx  entity_loader.py  fast_noise_lite.pxd  gui.py  gui_prefabs.py  mesh_generator.pyx  player.py  resource_loader.py  settings.py  shaders.py  voxel_chunk.py
(+36 files in other folders)
