[tool.poetry]
name = "CubePixel"
version = "0.1.0"
description = "Voxel game made with ursina game engine"
authors = ["a2cy"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
ursina = "^7.0.0"
numpy = "^2.1.1"

[build-system]
requires = ["poetry-core", "setuptools", "cython"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.build]
script = "setup.py"